<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string
            name="nav_header_title"
            translatable="false">Applify</string>
    <string
            name="nav_header_subtitle"
            translatable="false">soporteapplify@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">SIMple</string>
    <string name="title_home">Inicio</string>
    <string name="title_about">Acerca de</string>
    <string name="title_politicas">Políticas de la app</string>
    <string name="title_telepunto">Telepuntos</string>
    <string name="title_email">Correo</string>
    <string name="title_servicios">Servicios</string>
    <string name="title_invite">Invitar amigo</string>
    <string name="title_settings">Configuración</string>
    <string name="title_preference_apariencia">Apariencia</string>
    <string name="summary_preference_apariencia">Ajustes de la ui, temas, actualizaciones de la aplicación</string>
    <string name="title_preference_theme">Tema</string>
    <string name="theme_system">Según el sistema</string>
    <string name="theme_light">Claro</string>
    <string name="theme_dark">Oscuro</string>
    <string name="title_preference_home">Inicio</string>
    <string name="summary_preference_home">Personalice su pantalla de inicio según sus necesidades</string>
    <string name="good_day">Buenos días</string>
    <string name="good_night">Buenas noches</string>
    <string name="good_afternoon">Buenas tardes</string>
    <string name="consulta_saldo">Saldo</string>
    <string name="consulta_bono">Bonos</string>
    <string name="consulta_datos">Datos</string>
    <string name="consulta_pospago">Pospago</string>
    <string name="consulta_adelanta">Adelanta</string>
    <string name="title_categoria_recarga">Recarga</string>
    <string name="hint_recarga">Código de recarga</string>
    <string name="button_recarga">Recargar</string>
    <string name="title_categoria_transferir">Enviar saldo</string>
    <string name="hint_numero">Número</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_clave">Clave</string>
    <string name="button_transferir">Transferir</string>
    <string name="title_categoria_adelanta">Adelanta saldo</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="button_adelanta">Solicitar</string>
    <string name="title_balances">Balances</string>
    <string name="title_compras">Compras</string>
    <string name="title_llamadas">Llamadas</string>
    <string name="title_nauta">Nauta</string>
    <string name="balances_preference">Balances</string>
    <string name="summary_balances">Actualización periodica de sus balances, alerta de vencimiento y resumen en las notificaciones</string>
    <string name="actualizar_balances">Actualizar</string>
    <string name="summary_actualizacion_de_balances">Actualizacion de sus balances segun el periodo de tiempo seleccionado</string>
    <string name="title_perfil_preference">Usuario</string>
    <string name="summary_perfil_preference">sin número</string>
    <string name="button_aceptar">Continuar</string>
    <string name="description_nombre_del_usuario">Nombre del usuario</string>
    <string name="description_numero_movil_del_usuario">numero movil del usuario</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_numero_welcome">Número</string>
    <string name="title_bienvenido">¡Bienvenido!</string>
    <string name="subtitle_bienvenido">Antes de comenzar necesitamos complete los siguientes datos para poder brindarle una mejor experiencia. Sus datos serán almacenados en el dispositivo y nunca serán compartidos.</string>
    <string name="text_snackbarinserte_su_numero_y_su_nombre">¡Inserte su número y nombre!</string>
    <string name="summary_notification_balance">Mostrar el estado de sus balances en las notificaciones</string>
    <string name="title_notification_balance">Notificación</string>
    <string name="text_politicas">
        Al continuar usted acepta las
        <a href="https://applifycu.github.io/website/politicas.html">Políticas de Privacidad</a>
        y
        <a href="https://applifycu.github.io/website/politicas.html">Términos de Uso</a>
        de Applify.
    </string>
    <string name="summary_security">Desbloquear la aplicación con su huella o reconocimiento facial</string>
    <string name="title_security">Desbloquear</string>
    <string name="summary_confirma">Saltar el mensaje de confirmación predeterminado de su operador al ejecutar los códigos USSD</string>
    <string name="title_confirma">Confirmación</string>
    <string name="title_preference_security">Seguridad</string>
    <string name="summary_preference_security">Bloqueo de la aplicación, confirmación antes de ejecutar una acción</string>
    <string name="title_bug">Error</string>
    <string name="message_bug">¡Oops! No eres tú, soy yo...\n\nAl parecer, existe un problema aquí y debemos resolverlo. Envía el reporte para darle una solución en próximas versiones.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget con informacion de sus Balances (Android 8+)</string>
    <string name="diaria_vencimiento">24 horas a partir de su uso</string>
    <string
        name="diaria_lte"
        translatable="false">200 MB solo para la red lte</string>
    <string name="precio_diaria">25.00 CUP</string>
    <string name="diaria_title">Diaria</string>
    <string name="mensajeria_vencimiento">30 días a partir de su uso</string>
    <string name="mensajeria_datos">600 MB para toDus y correo nauta</string>
    <string name="mensajeria">25.00 CUP</string>
    <string name="mensajeria_title">Mensajería</string>
    <string name="paquetes">LTE</string>
    <string name="lte_extra_precio">950 CUP</string>
    <string name="lte_extra_paquete_all">4.5 GB para todas las redes</string>
    <string name="lte_paquete_lte">12 GB solo para la red lte</string>
    <string name="lte_extra_nacional">300 MB para la red nacional</string>
    <string name="lte_extra_vencimiento">30 días a partir de su uso</string>
    <string name="message_activar_amigo">Podrás llamar a tres números con una tarifa preferencial de 5.00 CUP el minuto en un horario de 7:00 a.m - 10:45 p.m. A partir de la 4ta. suscripción se le cobrará 2.50 CUP por cada número.</string>
    <string name="title_activar_amigo">Activar</string>
    <string name="precio_activar_amigo">25.00 CUP</string>
    <string name="message_add_amigo">Las tres primeras suscripciones son gratis, a patir de la 4ta se le descontará de su saldo principal.</string>
    <string name="title_add_amigo">Agregar</string>
    <string name="precio_add_amigo">2.50 CUP</string>
    <string name="message_disable_amigo">Al desactivar su plan amigo no podrá seguir haciendo uso del mismo, para volver a activarlo deberá pagar 25.00 CUP.</string>
    <string name="title_disable_amigo">Desactivar</string>
    <string name="message_delete_amigo">Eliminar las suscripciones es libre de costo, si desea agregar un nuevo número a partir del 4to se le cobrará 2.50 CUP por cada uno.</string>
    <string name="title_delete_amigo">Eliminar</string>
    <string name="message_contact_transfer">Se necesitan permisos para leer sus contactos y poder obtener su número móvil para insertarlo en el número de transferencia de saldo.</string>
    <string name="title_contact_transfer">Contactos</string>
    <string name="summary_tarifa">Mantenga su tarifa por consumo desactivada para proteger su saldo principal, dado que si la activa sufrira un consumo elevado de saldo</string>
    <string name="title_tarifa">Tarifa por consumo</string>
    <string name="description_add_photo">Agregar foto de perfil</string>
    <string name="description_photo_profile">Iaagen de perfil</string>
    <string name="description_security">Para activar el bloqueo de la aplicación debe de tener configurado en su dispositivo al menos una de las dos opciones biométricas compatibles, desbloqueo facial o por huella.</string>
    <string name="nauta_login">Iniciar Sesión</string>
    <string name="nauta_portal">Portal Usuario</string>
    <string name="hint_usuario_login">Usuario</string>
    <string name="hint_password_login">Contraseña</string>
    <string name="hint_captcha">Captcha</string>
    <string name="login_button">Conectarse</string>
    <string name="login_portal_button">Acceder</string>
    <string name="button_delete_mail">Eliminar correos</string>
    <string name="button_sync">Sincronizar</string>
    <string name="hint_correo_nauta">Correo</string>
    <string name="button_info_login">Información de conexión</string>
    <string
        name="view_telepuntos"
        translatable="false">https://www.google.com/maps/search/ETECSA/</string>
    <string name="is_not_dual_sim">Su dispositivo no puede usar esta función porque no es compatible con dual SIM</string>
    <string name="url_twitter">https://twitter.com/applifycu</string>
    <string name="url_telegram">https://t.me/applifycu</string>
    <string name="url_github">https://github.com/applifycu/simple</string>
    <string name="message_donate">Agradecemos su interés por apoyar nuestro proyecto. Esto nos ayuda a que la aplicación siga perfeccionándose. Aunque SIMple es gratuita, su desarrollo conlleva un gasto monetario por parte de su desarrollador, ya que en determinados momentos tiene que buscar información para poder agregar nuevas funciones, así como actualizar la aplicación. Cualquier ayuda es bienvenida, pero tenga en cuenta que esto no significa que se agregarán nuevas funciones.</string>
    <string name="message_not_photo">Aquí no hay nada que mostrar</string>
    <string name="permission_read_external_storage">Necesitamos que usted conceda los permisos necesarios para acceder a sus archivos y así usted pueda cargar su foto de perfil.</string>
    <string name="title_permission_read_external_storage">Archivos</string>
    <string name="title_name_preference">Nombre</string>
    <string name="summary_name_preference">Este no es un nombre de usuario ni un PIN, solo será usado para dar una mejor experiencia al usuario</string>
    <string name="hint_name_preference">Su nombre</string>
    <string name="title_numero_preference">Número</string>
    <string name="summary_numero_preference">Su número móvil</string>
    <string name="hint_numero_preference">Número móvil</string>
    <string name="title_nauta_preference">Nauta</string>
    <string name="summary_nauta_preference">Guardar cuenta de navegación nacional e internacional</string>
    <string name="user_and_password_empty">Usuario o contraseña vacíos</string>
    <string name="connect_to_portal">Acceder</string>
    <string name="description_captcha">Imagen captcha</string>
    <string name="description_sync_captcha">Cargar imagen captcha</string>
    <string name="description_view_password">Mostrar contraseña</string>
    <string name="portal_title">Portal Nauta</string>
    <string name="text_empty">Hay campos vacíos</string>
    <string name="summary_autocomplete">Rellenar automáticamente campos que requieran su usuario y contraseña</string>
    <string name="title_autocomplete">Rellenado</string>
    <string name="perfil_title">Perfil</string>
    <string name="balances">Paquetes</string>
    <string name="paquetes_proximos_a_vencer">Paquetes proximos a vencer</string>
    <string name="update_balances">¡Se han actualizado sus balances!</string>
    <string name="update">Actualizado:\n</string>
    <string name="vencimiento_message">Sus datos están próximos a vencer</string>
</resources>