<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="@dimen/nav_header_height"
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/nav_header_vertical_spacing">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/logo_applify"
            android:id="@+id/imageView" />

        <ImageButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_scanner_qr_24px"
            android:id="@+id/scanner" />

    </RelativeLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textAppearance="?textAppearanceTitleMedium"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?textAppearanceBodySmall"
        android:id="@+id/textView"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
