<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coordinator">

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/nested_scroll_view">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardElevation="3dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:boxCornerRadiusTopEnd="30dp"
                        android:hint="@string/hint_nombre"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxCornerRadiusBottomEnd="30dp"
                        style="?attr/textInputFilledStyle"
                        app:boxCornerRadiusTopStart="30dp"
                        app:errorEnabled="true"
                        app:boxStrokeWidth="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:contentDescription="@string/description_nombre_del_usuario"
                            android:maxLength="15"
                            android:inputType="text"
                            android:id="@+id/edit_nombre" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        app:boxCornerRadiusTopEnd="30dp"
                        android:hint="@string/hint_numero_welcome"
                        app:boxCornerRadiusBottomStart="30dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxCornerRadiusBottomEnd="30dp"
                        style="?attr/textInputFilledStyle"
                        app:prefixText="+53"
                        app:boxCornerRadiusTopStart="30dp"
                        app:errorEnabled="true"
                        app:boxStrokeWidth="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:contentDescription="@string/description_numero_movil_del_usuario"
                            android:maxLength="8"
                            android:inputType="phone"
                            android:id="@+id/edit_numero" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
